master - fixed spacing on portfolio images

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -236,7 +236,7 @@ input::placeholder{
 .portfolio-square{
   position: relative;
   display:inline-block;
-  margin-right: 1em;
+  /*margin-right: 1em;*/
   margin-bottom: 3.4375em;
 }
 
